add register
now user can regisster
